post-new-update

--- a/app/assets/stylesheets/posts/new.scss
+++ b/app/assets/stylesheets/posts/new.scss
@@ -1,5 +1,5 @@
-
 .post-new {
+  padding-bottom: 9rem !important;
   select {
     height: 1.5rem;
     width:50%;
@@ -13,7 +13,6 @@
     margin: 2rem auto;
     border: 1px solid #cccccc;
     border-radius: 0.5rem;
-    // background-color: #fff;
     padding: 3rem 2rem 0;
     .form-content {
       margin-bottom: 3rem;
