--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -46,6 +46,117 @@ body{
   color: red;
 }
 
+.modal {
+  display: none;
+  position: fixed;
+  background-color: rgba(0,0,0, 0.5);
+  height: 100vh;
+  width: 100vw;
+  z-index: 1000;
+  &__item {
+    display: none;
+    border-radius: 0.3rem;
+    width: 50vw;
+    height: 60vh;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    &__delete {
+      color: #fff;
+      font-weight: bold;
+      font-size: 2rem;
+      position: fixed;
+      right: 0;
+      top:0;
+      line-height: 1rem;
+      cursor: pointer;
+    }
+    &__items {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: flex-start;
+      padding:1.5rem;
+      overflow: scroll;
+      height: 100%;
+      &__item {
+        background-color: #fff;
+        width: 18%;
+        margin: 0 2.5% 1rem 0;
+        border: 1px solid #ccc;
+        border-radius: 0.3rem;
+        cursor: pointer;
+        text-align: center;
+        &__img{
+          margin: 0 auto;
+          img {
+            width: 4rem;
+            height: 4rem;
+          }
+        }
+        &__brand {
+          font-size: 0.8rem;
+        }
+        &__name {
+          padding:0.5rem;
+          font-size: 0.6rem;
+        }
+      }
+      &__item:nth-child(5n){
+        margin-right: 0;
+      }
+    }
+  }
+  &__salon {
+    display: none;
+    background-color: #fff;
+    border-radius: 0.3rem;
+    width: 50vw;
+    height: 60vh;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    &__delete {
+      // color: #fff;
+      // font-weight: bold;
+      font-size: 1rem;
+      position: fixed;
+      right: 0;
+      top:0;
+      line-height: 1rem;
+      cursor: pointer;
+    }
+    .searchbox__form__search__salon {
+      width: 60%;
+      padding: 0.5rem;
+      position: absolute;
+      border: 1px solid #ccc;
+      position: absolute;
+      top: 10%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+    #salon-search-result {
+      width: 60%;
+      position: absolute;
+      top: 20%;
+      left: 20%;
+      .post-result-salon {
+        // text-decoration: underline;
+        height: 3.5rem;
+        border-bottom: 1px solid #ccc;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        p {
+          margin-bottom: 0;
+        }
+      }
+    }
+  }
+}
+
 .individual-page {
   padding-bottom: 3rem;
   &__head {
