--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -137,7 +137,7 @@ body{
       left: 50%;
       transform: translate(-50%, -50%);
     }
-    #salon-search-result {
+    #salon-search-result-new {
       width: 60%;
       position: absolute;
       top: 20%;
