--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -117,6 +117,7 @@ body{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    overflow: scroll;
     &__delete {
       // color: #fff;
       // font-weight: bold;
