--- a/app/assets/stylesheets/devise/new.scss
+++ b/app/assets/stylesheets/devise/new.scss
@@ -28,6 +28,7 @@
         width: 50%;
         margin: 1rem auto;
         input {
+          padding:0;
           background-color: #002966;
           color: #fff;
         }
