--- a/app/assets/stylesheets/posts/new.scss
+++ b/app/assets/stylesheets/posts/new.scss
@@ -73,6 +73,7 @@
           }
           input {
             float:right;
+            width: 30%;
             padding: 0 1rem;
             margin: 0.2rem 0 1rem 0;
             font-size: 1rem;
