--- a/app/assets/stylesheets/posts/new.scss
+++ b/app/assets/stylesheets/posts/new.scss
@@ -74,7 +74,7 @@
           input {
             float:right;
             width: 30%;
-            padding: 0 1rem;
+            text-align: center;
             margin: 0.2rem 0 1rem 0;
             font-size: 1rem;
             background-color: #ff2a2a;
