--- a/app/assets/stylesheets/users/_user.scss
+++ b/app/assets/stylesheets/users/_user.scss
@@ -9,6 +9,7 @@
   margin-bottom: 1rem;
   &__leftbox {
     width: 20%;
+    margin-right: 1rem;
     &__icon {
       width: 5rem;
       height: 5rem;
