--- a/app/views/users/iconedit.html.haml
+++ b/app/views/users/iconedit.html.haml
@@ -10,7 +10,8 @@
         プロフィールに使用する画像を編集できます。
       .user-edit__contents__main__icon
         .user-edit__contents__main__icon__box
-          = image_tag current_user.icon_judge
+          = image_tag "egg-icon-gray.png", class:"afterdelete", style: "display:none;"
+          = image_tag current_user.icon_judge, class:"beforedelete", style: "display:block;"
       .user-edit__contents__main__iconForm
         %label{for:"user_icon"}写真をアップロード
         = f.file_field :icon, type: "file", style: 'display:none;'
