--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,5 +1,5 @@
 = form_for(resource, as: resource_name, url: registration_path(resource_name), class: 'user-new individual-page') do |f|
-  = render "devise/shared/error_messages", resource: resource
+  -# = render "devise/shared/error_messages", resource: resource
   .user-new__head.individual-page__head
     .user-new__head__contents.individual-page__head__contents
       %span Hair 新規会員登録
