--- a/app/views/users/timeline.html.haml
+++ b/app/views/users/timeline.html.haml
@@ -39,12 +39,12 @@
       .genderWomen
         .posts
           = render partial: 'posts/post', collection: @womenPosts
-        = paginate @womenPosts
+        = paginate @womenPosts, param_name: 'women_page'
       .genderMen
         .posts
           = render partial: 'posts/post', collection: @menPosts
-        = paginate @menPosts
+        = paginate @menPosts, param_name: 'men_page'
       .genderFree
         .posts
           = render partial: 'posts/post', collection: @freePosts
-        = paginate @freePosts
+        = paginate @freePosts, param_name: 'free_page'
