--- a/app/assets/stylesheets/shared/_gender-select.scss
+++ b/app/assets/stylesheets/shared/_gender-select.scss
@@ -18,6 +18,20 @@
       margin-bottom: -2px !important;
       border-bottom: solid 2px rgba(0, 0, 0, 1);
     }
+    a {
+      color: inherit;
+      width: 18.5%;
+      line-height: 3em;
+      text-align: center;
+      opacity: 0.4;
+      cursor: pointer;
+    }
+    a:hover:not(.active) {
+      color: inherit;
+      text-decoration: none;
+      margin-bottom: -2px !important;
+      border-bottom: solid 2px rgba(0, 0, 0, 1);
+    }
     #genderWomen {
       margin: 0 10% 0;
     }
@@ -27,6 +41,10 @@
     .active {
       opacity: 1.0;
       border-bottom: solid 2px rgba(0, 0, 0, 0.8);
+    }
+    .active:hover {
+      color: inherit;
+      text-decoration: none;
     }
   }
 }
