--- a/app/views/posts/ranking.html.haml
+++ b/app/views/posts/ranking.html.haml
@@ -7,6 +7,7 @@
   .ranking__contents
     .genderAll.active
       .posts
+        -# = render partial: 'post', collection: @posts, as: "post"
         = render @posts
     .genderWomen
       .posts
