--- a/app/assets/stylesheets/layouts/header.scss
+++ b/app/assets/stylesheets/layouts/header.scss
@@ -73,7 +73,16 @@
       align-items: center;
       cursor: pointer;
       &__user {
+        position: relative;
+        .notification-count {
+          position: absolute;
+          left: -0.2rem;
+          top: -0.2rem;
+          z-index: 999;
+        }
         img {
+          width:2.5rem;
+          height:2.5rem;
           border-radius: 1.5em;
         }
         a:hover {
@@ -94,6 +103,11 @@
         &__list {
           li {
             margin-bottom: 0.5rem;
+            position: relative;
+            .notification-count {
+              position: absolute;
+              right:0;
+            }
             a {
               color: inherit;
             }
