--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -11,22 +11,25 @@
     .header__container__right
       - if user_signed_in?
         .header__container__right__user
-          - if current_user.icon.url.present?
-            = image_tag current_user.icon.url, class: '', size: '40x38'
-          - else
-            = image_tag 'egg-icon-gray.png', size: '40x38'
+          - unless notification_count == 0
+            .notification-count
+              = notification_count
+          = image_tag current_user.icon_judge
           @#{current_user.acountid}
         .header__container__right__user-menu#header-user-menu
           %ul.header__container__right__user-menu__list
             %li 
               = link_to 'マイページ', user_path(current_user.id)
-            %li 
+            %li
+              - unless notification_count == 0
+                .notification-count
+                  = notification_count
               = link_to 'ダイレクトメッセージ', rooms_path(current_user)
             %li 
               = link_to 'スタイル投稿', new_post_path(current_user.id)
             %li 
               = link_to 'ユーザー情報編集', edit_user_path(current_user)
-          = link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'header__container__right__user-menu__logout', data: { confirm: 'ログアウトすんの？' }
+          = link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'header__container__right__user-menu__logout', data: { confirm: '本当にログアウトしますか？' }
       - else
         .header__container__right__signin
           = link_to "login", new_user_session_path, class: 'header__container__right__signin__login'
